--- a/Exercicios/exercicio_less/exercicio_less/package.json
+++ b/Exercicios/exercicio_less/exercicio_less/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "less": "lessc ./src/styles/main.less ./build/styles/main.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
